[package]
name = "yar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["cargo"] }
id3 = "1.5.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.8"
